--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <span class="badge badge-secondary">
+                CAN YOU CLICK THIS BUTTON ?
+            </span>
+            <button type="button" class="btn btn-primary">
+                CAN YOU ?
+            </button>
+        </div>
+        <div class="row">
+
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
